# Auto_Gain_Project

./: .gitignore  CLIENT_DSP_CHANGELOG.md  CMakeLists.txt  DELIVERY_NOTES.md  Project.docx  README.md
.github/workflows/: build-aax.yml  build.yml
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: LevelMeter.h  Saturation.h  ToneFilter.h
Source/gui/: ControlStripDisplay.h  PluginLookAndFeel.h  VacuumTube.h  VerticalMeter.h  Visualizer.h
installer/windows/: WapDemSaturation.iss
scripts/: build_macos_pkg.sh  build_windows_installer.ps1  package_artifacts.sh
vs/: .vsconfig
